# scarecrow

./: .gitignore  README.md  Round_1_BC_counts.txt  pyproject.toml  setup.cfg
barcodes/: bc_data_n123_R1_v3_5.barcodes  bc_data_n198_v5.barcodes  bc_data_n24_v4.barcodes  bc_data_n255_R1_v3_5.barcodes  bc_data_n32_R1_v3_5.barcodes  cmb.barcodes
barcodes/Parse_WTv2/: bc_data_n99_v5.txt
barcodes/Scale/: 3lvlRNA_lig.txt  3lvlRNA_pcr.txt
contaminants/: contaminants.fasta
docs/: debug.md  example_10X3p.md  example_10X5p.md  example_10Xflex.md  example_evercode.md  example_scale.md  installation.md  introduction.md  root.md  testing.md  toolkit.md  toolkit_encode.md  toolkit_harvest.md  toolkit_inspect.md  toolkit_json.md  toolkit_pickle.md  toolkit_rake.md  toolkit_reap.md  toolkit_recast.md  toolkit_sam2fastq.md  toolkit_samstat.md  toolkit_samtag.md  toolkit_seed.md  toolkit_sift.md  toolkit_stats.md  toolkit_tally.md  toolkit_weed.md  troubleshooting.md  workflow.md
manuscript/: manuscript_figures.md
specs/10xv2/: 10xv2.yaml
specs/evercode/: BC1.txt  BC2-3.txt  evercode-v3.yaml  i5_index_reverse_complement.txt
specs/splitseq/: splitseq.yaml
src/: barcode_count_dist.R
src/HPC/: counts2mtx.R  counts2mtx.sh  kNN.R  kNN.sh  kallisto.sh  read_reassignment.sh  samtags.sh  umi_tools.sh
src/R/: barcode_combn_dist.R  barcode_count_dist.R
src/scarecrow/: __init__.py  _version.py  barcode_check.py  encode.py  encode_050126.py  encode_backup.py  encode_trie.py  error_correct.py  extract.py  fastq_logging.py  harvest.py  harvest_backup.py  inspect.py  json.py  logger.py  main.py  old_code.py  rake.py  read_fastqs.py  read_fastqs_original.py  reap.py  reap_backup.py  reap_mp.py  recast.py  sam2fastq.py  samstat.py  samtag backup.py  samtag.py  scarecrow_barcodes.py  scarecrow_extract.py  scarecrow_harvest.py  scarecrow_reap.py  scarecrow_seed.py  seed.py  seed_020126.py  seed_backup.py  sift.py  stats.py  tally.py  tools.py  (+1 more)
src/scarecrow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
