[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scarecrow"
version = "0.2.dev"
description = "A library-agnostic toolkit for pre-processing combinatorial indexed single-cell RNA sequence data."
authors = [{name = "David Wragg", email = "david.wragg@abdn.ac.uk"}]
requires-python = ">=3.7"

# Dependencies
dependencies = [
    "numpy",
    "pandas",
    "pip",
    "psutil",
    "pympler",
    "pysam",
    "rich",
    "scipy",
    "seaborn"
]

[project.scripts]
scarecrow = "scarecrow.main:main"
