[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scarecrow"
dynamic = ["version"]
description = "A library-agnostic toolkit for pre-processing combinatorial indexed single-cell RNA sequence data."
authors = [{name = "David Wragg", email = "david.wragg@abdn.ac.uk"}]
requires-python = ">=3.7"

# Dependencies
dependencies = [
    "numpy",
    "pandas",
    "pip",
    "psutil",
    "pympler",
    "pyahocorasick",
    "pysam",
    "rich",
    "scipy",
    "seaborn"
]

[project.scripts]
scarecrow = "scarecrow.main:main"

[tool.setuptools]
packages = ["scarecrow"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "src/scarecrow/_version.py"
fallback_version = "0.0.0"
